# tpPOO

./: CMakeLists.txt  README.md  comandos.txt
lib/: POO - 2324 - Bibioteca POO Consola README.txt  Terminal.cpp  Terminal.h  main.cpp
src/: Interface.cpp  Interface.h  main.cpp
src/Aparelhos/: aparelho.cpp  aparelho.h  aquecedor.cpp  aquecedor.h  aspersor.cpp  aspersor.h  lampada.cpp  lampada.h  refrigerador.cpp  refrigerador.h
src/Habitacoes/: habitacao.cpp  habitacao.h
src/Processadores/: processador.cpp  processador.h
src/Propriedades/: Fumo.cpp  Fumo.h  Humidade.cpp  Humidade.h  Radiacao.cpp  Radiacao.h  Vibracao.cpp  Vibracao.h  fumo.cpp  fumo.h  humidade.cpp  humidade.h  luz.cpp  luz.h  propriedade.cpp  propriedade.h  radiacao.cpp  radiacao.h  som.cpp  som.h  temperatura.cpp  temperatura.h
src/Regras/: Entre.cpp  Entre.h  Fora.cpp  Fora.h  IgualA.cpp  IgualA.h  MaiorQue.cpp  MaiorQue.h  MenorQue.cpp  MenorQue.h  RegraIgualA.cpp  RegraIgualA.h  regra.cpp  regra.h
src/Sensores/: sensor.cpp  sensor.h  sensorFumo.cpp  sensorFumo.h  sensorHumidade.cpp  sensorHumidade.h  sensorLuminosidade.cpp  sensorLuminosidade.h  sensorMovimento.cpp  sensorMovimento.h  sensorRadiacao.cpp  sensorRadiacao.h  sensorSom.cpp  sensorSom.h  sensorTemperatura.cpp  sensorTemperatura.h
src/Zonas/: zona.cpp  zona.h
